@@ -2,6 +2,7 @@ package datawave.core.iterators;
 
 import java.io.IOException;
 import java.io.InputStream;
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
@@ -100,13 +101,17 @@ public class DatawaveFieldIndexListIteratorJexl extends DatawaveFieldIndexCachin
     }
 
     @Override
-    public String toString() {
+    protected String toStringImpl(boolean includeQueryId) {
         StringBuilder builder = new StringBuilder();
-        if (fst != null)
+        if (fst != null) {
             builder.append("DatawaveFieldIndexFSTIteratorJexl");
-        else
+        } else {
             builder.append("DatawaveFieldIndexListIteratorJexl");
-        builder.append(" (").append(queryId).append(") {fName=").append(getFieldName()).append(", negated=").append(isNegated()).append("}");
+        }
+        if (includeQueryId) {
+            builder.append(" (").append(queryId).append(")");
+        }
+        builder.append(" {fName=").append(getFieldName()).append(", negated=").append(isNegated()).append("}");
         return builder.toString();
     }
 
@@ -247,11 +252,15 @@ public class DatawaveFieldIndexListIteratorJexl extends DatawaveFieldIndexCachin
                     throw new IllegalArgumentException("Compression codec " + compressionCodec + " in not a subclass of CompressionCodec.", e);
                 }
                 try {
-                    codec = codecClass.newInstance();
+                    codec = codecClass.getDeclaredConstructor().newInstance();
                 } catch (InstantiationException e) {
                     throw new IllegalArgumentException("Compression codec " + compressionCodec + " could not be instantiated.", e);
                 } catch (IllegalAccessException e) {
                     throw new IllegalArgumentException("Compression codec " + compressionCodec + " could not be accessed.", e);
+                } catch (InvocationTargetException e) {
+                    throw new IllegalArgumentException("Compression code " + compressionCodec + " could not be invoked.", e);
+                } catch (NoSuchMethodException e) {
+                    throw new IllegalArgumentException("Comporession code " + compressionCodec + " method not found. ", e);
                 }
             }
 
