@@ -59,7 +59,7 @@ public class UserAuthorizationsTest {
         assertNotNull(fieldValues);
         assertEquals(fieldNames.length, fieldValues.length);
 
-        T original = clazz.newInstance();
+        T original = clazz.getDeclaredConstructor().newInstance();
         for (int i = 0; i < fieldNames.length; ++i)
             field(clazz, fieldNames[i]).set(original, fieldValues[i]);
 
